--- a/project-AutoEncodedBuddha.html
+++ b/project-AutoEncodedBuddha.html
@@ -88,7 +88,15 @@
 								Hommage to Nam June Paik’s TV Buddha.
 								Collaboration with Roland Arnoldt. <br>
 
-								A Buddha statue watches the computer attempting to draw its own image. An artificial intelligence model was trained on 5000 images of Buddha, yet the computer struggles to depict the Buddha’s essence.</p>						</div><!-- // .box-info -->
+								A Buddha statue watches the computer attempting to draw its own image. An artificial intelligence model<small><sub>1</sub></small> was trained on 5000 images of Buddha, yet the computer struggles to depict the Buddha’s essence.</p>
+
+<br>
+								<small><small>
+									1) Unsupervised Representation Learning with Deep Convolutional Generative Adversarial Networks (2015)<br>
+								</small></small>
+
+								</div><!-- // .box-info -->
+
 
 					</div><!-- // .desktop-3 -->
 
