--- a/project-closedLoop.html
+++ b/project-closedLoop.html
@@ -75,7 +75,7 @@
 
 			<div class="desktop-3 push-6 tablet-12 tablet-push-0 nested columns">
 
-				<div class="sidebar sticky">
+				<div class="sidebar">
 
 					<div class="desktop-6 tablet-12 columns">
 					<!-- <div class="desktop-3 tablet-12 columns"> -->
@@ -88,10 +88,15 @@
 							<p>
 
 
-								Closed Loop is a recording of two artificial intelligence models conversing with each other - one with words the other with images - in a never-ending feedback loop. The words of one describe the images of the other, which then seeks to describe the words with a fresh image… Two neural networks getting lost in their own nuances, sparking and branching off each other as they converse in a perpetual game of AI "Exquisite Corpse".<br><br>
+								Closed Loop is a recording of two artificial intelligence models conversing with each other - one with words<small><sub>1</sub></small> the other with images<small><sub>2</sub></small> - in a never-ending feedback loop. The words of one describe the images of the other, which then seeks to describe the words with a fresh image… Two neural networks getting lost in their own nuances, sparking and branching off each other as they converse in a perpetual game of AI "Exquisite Corpse".<br><br>
 
 
 							Closed Loop has had no textual or visual input by the artist  <br><br>
+
+							<small><small>
+							1) DenseCap: Fully Convolutional Localization Networks for Dense Captioning (2016)<br>
+							2) Plug & Play Generative Networks: Conditional Iterative Generation of Images in Latent Space (2016)
+						</small></small>
 
 							<h3 class="border-top">Technical</h3>
 							<small>Two neural networks: a language captioning recurrent neural network writing what it sees in the images generated, and a generative neural network generating images responding to the words generated.
@@ -105,7 +110,7 @@
 “The conversation shifts between the logical, to the enigmatic to the frankly incomprehensible, produces constant frissons of surprise and in the end a profound sense of displacement from one’s own settled perceptual self.” - (<a id=show target="_blank" href="https://www.64bar1.com/">64/1</a>, curatorial collective) <br>
 
 
-								<br> Special thanks to <a id=show target="_blank" href="http://ouiouioui.space/">Roland Arnoldt</a> (New York based creative technologist and collaborator), and <a id=show  target="_blank" href="http://anhnguyen.me/blog/">Anh Nguyen</a> et al. at <a id=show target="_blank" href="http://www.evolvingai.org/">Evolving-AI</a> for their work on GANs.</small>
+								<br> Special thanks to <a id=show target="_blank" href="http://ouiouioui.space/">Roland Arnoldt</a> (New York based creative technologist and collaborator), and <a id=show  target="_blank" href="http://anhnguyen.me/blog/">Anh Nguyen</a> et al. at <a id=show target="_blank" href="http://www.evolvingai.org/">Evolving-AI</a> for their work on GANs.
 
 </p>
 						</div><!-- // .box-info -->
