--- a/project-cusp.html
+++ b/project-cusp.html
@@ -80,7 +80,7 @@
 
 			<!-- <div class="desktop-3 tablet-12 nested columns"> -->
 
-				<div class="sidebar sticky">
+				<div class="sidebar">
 
 					<div class="desktop-6 tablet-12 columns">
 
@@ -100,8 +100,38 @@
 
 
 
-								<small>*Neural networks are programming models which are biologically inspired and learn from observing data. GANs (generative adversarial networks) are neural networks which learn to mimic through generation and refinement.<br>
+								<small>*Neural networks are programming models which are biologically inspired and learn from observing data. GANs (generative adversarial networks) are neural networks which learn to mimic through generation and refinement.<br><br></small>
 
+
+
+									<h3 class="border-top">Acknowledgements</h3>
+									<small>
+																	<h1>Camera:</h1> Toby Elwes<br>
+
+																	<h1>Machine learning models:</h1>
+																	Progressive Growing of GANs for Improved Quality, Stability, and Variation (2018)<br>
+																	WaveNet: A Generative Model for Raw Audio (2016)<br>
+
+																	<h1>Datasets:</h1>
+																	LSUN: Construction of a Large-scale Image Dataset using Deep Learning with Humans in the Loop (2015)<br>
+																	Customised dataset of marsh bird images from Flickr community (2019)<br>
+
+																	<h1>Special thanks:</h1>
+																	The machine learning community, in particular at Nvidia and Deepmind.<br>
+																	Maitreyi Maheshwari and the team at Zabludowicz Collection.<br>
+
+																	<br><div>
+																	<a id=show target="_blank" href="https://vimeo.com/351045765">
+																		<img src="images/project-cusp/live.png" style="float: left; margin-top: 0px; margin-right: 15px;" height="70px" width="70px" border="5px" alt="CUSP 2019 - Jake Elwes digital artist" />
+																			Watch on Vimeo - live audio-visual <br>performance collaboration with Cameron Thomas
+																		</a>
+																</div><br>
+																<div>
+																	<a id=show target="_blank" href="https://cdn.zabludowiczcollection.com/files/FINAL_ZC_Invites-Leaftlet_Jake-Elwes_Digital.pdf?mtime=20190325101231">
+																		<img src="images/project-cusp/in.png" style="float: left; margin-top: 0px; margin-right: 15px;" height="70px" width="70px" border="5px" alt="CUSP 2019 - Jake Elwes digital artist" /></p>
+																		<p>Interview with Jake Elwes and <br> Curator Maitreyi Maheshwari</a></p>
+																</div>
+									</small>
 
 						</div><!-- // .box-info -->
 
@@ -170,31 +200,6 @@
 						$(window).resize(resizeDivs);
 					</script> -->
 
-
-					<div align="left">
-					<small>
-
-
-													<br><br><h1>Acknowledgements:</h1>
-													<hr><h1>Camera:</h1> Toby Elwes<br>
-
-													<h1>Machine learning models:</h1>
-													Progressive Growing of GANs for Improved Quality, Stability, and Variation (2018)<br>
-													WaveNet: A Generative Model for Raw Audio (2016)<br>
-
-													<h1>Datasets:</h1>
-													LSUN: Construction of a Large-scale Image Dataset using Deep Learning with Humans in the Loop (2015)<br>
-													Customised dataset of marsh bird images from Flickr community (2019)<br>
-
-													<h1>Special thanks:</h1>
-													The machine learning community, in particular at Nvidia and Deepmind.<br>
-													Maitreyi Maheshwari and the team at Zabludowicz Collection.<br>
-
-													<a id=show target="_blank" href="https://vimeo.com/351045765"><img src="images/project-cusp/live.png" style="width:10%; " alt="CUSP 2019 - Jake Elwes digital artist" /><br> Watch on Vimeo - live audio visual performance collaboration with Cameron Thomas</a><br>
-													<a id=show target="_blank" href="https://cdn.zabludowiczcollection.com/files/FINAL_ZC_Invites-Leaftlet_Jake-Elwes_Digital.pdf?mtime=20190325101231"><img src="images/project-cusp/in.png" style="width:10%; " alt="CUSP 2019 - Jake Elwes digital artist" /><br>Interview with Jake Elwes and Curator Maitreyi Maheshwari</a>
-
-					</small>
-				</div>
 
 
 					<br>
