--- a/project-latentSpace.html
+++ b/project-latentSpace.html
@@ -97,9 +97,10 @@
 
 								Latent Space is a video snap-shot of an A.I. algorithm trained using 14.2 million photographs<small><sub>2</sub></small> continuously producing new images. <br><br>
 
-								<small>1) Plug & Play Generative Networks, 2019<br>
-								2) ImageNet: A Large-Scale Hierarchical Image Database, 2009
-								<br><br>Special thanks to <a id=show  target="_blank" href="http://anhnguyen.me/blog/">Anh Nguyen</a> et al. at <a id=show target="_blank" href="http://www.evolvingai.org/">Evolving-AI</a> for their research.</small>
+								<small><small>
+									1) Plug & Play Generative Networks: Conditional Iterative Generation of Images in Latent Space (2016)<br>
+								2) ImageNet: A Large-Scale Hierarchical Image Database (2009)
+								<br>Special thanks to <a id=show  target="_blank" href="http://anhnguyen.me/blog/">Anh Nguyen</a> et al. at <a id=show target="_blank" href="http://www.evolvingai.org/">Evolving-AI</a> for their research.</small></small>
 
 						</div><!-- // .box-info -->
 
