--- a/footer.html
+++ b/footer.html
@@ -40,7 +40,9 @@
 <section id="footer">
   <div class="container">
     <div class="desktop-3 columns">
-      <p>Copyright &copy; <a class="italic">Jake Elwes 2016</a></p>
+
+      <p>Copyright &copy; <a class="italic">Jake Elwes 2020<p id="copyright"><p>
+    </a></p>
     </div><!-- // .desktop-3 -->
   </div><!-- // .container -->
 
