--- a/about.html
+++ b/about.html
@@ -372,7 +372,7 @@ Caroline Achaintre, Elizabeth Price, and George Shaw (2017).<b>Bloomberg New Con
 
 							<h4>Talks / Conferences / Workshops</h4> <br>
 							<b>2019</b><br>
-							&emsp; talk - <a id=show target="_blank" href="https://www.adk.de/en/programme/index.htm?we_objectID=60143"> Beyond Conference - November 2019</a>, Assembly Rooms, Edinburgh, Scotland<br>
+							&emsp; talk - <a id=show target="_blank" href="https://beyondconference.org/speakers/jake-elwes/"> Beyond Conference - November 2019</a>, Assembly Rooms, Edinburgh, Scotland<br>
 							&emsp; panel & talk - <a id=show target="_blank" href="https://www.adk.de/en/programme/index.htm?we_objectID=60143"> 13th Academy Discussion [and …]: AI versus Art? - 18 Sept 2019</a>, Akademie der Künste, Berlin, Germany<br>
 							&emsp; panel & talk - Digital futures, materiality and added value: When data is a medium for artistic expression, what is the future value of the material artefact, Barbican Center, London<br>
 							&emsp; panel & talk - "So how is that working for you?, Goldsmiths University, London<br>
