--- a/project-DaDaTa.html
+++ b/project-DaDaTa.html
@@ -75,7 +75,7 @@
 
 			<div class="desktop-3 push-6 tablet-12 tablet-push-0 nested columns">
 
-				<div class="sidebar sticky">
+				<div class="sidebar">
 
 					<div class="desktop-6 tablet-12 columns">
 
@@ -85,7 +85,10 @@
 </p>
 
 							<p>In 'dada da ta' over 50 hours of video interviews with leading figures in the global tech industry have been transcribed using the IBM Watson AI speech to text programme. A custom-made computer programme then identified the instances when the participants spoke using numbers. It then abstracts these words from the source videos, leaving the interview’s chronology intact yet reduced to a stream of numbers:  <br><br> “One, one billion, one million, one hundred million, two billion, one, two hundred, ten thousand, eighteen thousand, two, two, two, ten, fifteen, nine thousand.” Elon Musk.
-</p>
+</p><br>
+<small><small>Interviews with leading figures in the global tech industry: <br> Mark Zuckerberg - CEO: Facebook, Jeff Benzos - CEO: Amazon, Brian Chesky - CEO: Airbnb, Larry Page &amp; Sergey Brin - Founders: Google, Peter Thiel - Founder: PayPal Palantir &amp; Marc Andreessen - Founder: Netscape, Steve Jobs - Founder: Apple Pixar, Nick Woodman - Founder: GoPro, Jack Dorsey - CEO: Twitter, James Park - CEO: Fitbit, Tim Cook - CEO: Apple, Reid Hoffman - Founder: LinkedIn, Stewart Butterfield - Founder: Flickr Slack, Drew Houston - Founder: Dropbox, Jack Ma - Founder: Alibaba Group, Jimmy Wales - CEO: Wikipedia, Niklas Zennström - Founder: Skype, Sean Rad - Founder: Tinder, Travis Kalanick - Founder: Uber, Satya Nadella - CEO: Microsoft, Elon Musk - Founder: SpaceX: Tesla &amp; Paypal, Bill Gates - Founder: Microsoft, Devin Wenig - Founder: eBay, Kevin Systrom - Founder: Instagram, Paul Eremenko - CEO: Airbus Group, Reid Hoffman - Founder: LinkedIn, Aaron Levie - Founder: Box, Jonathan Ive - CDO: Apple, Dustin Moskovitz -  Co-Founder: Facebook, Ben Silbermann - CEO: Pinterest, Reed Hastings - Founder: Netflix, Evan Spiegel - Founder: Snapchat, Daniel Ek - Founder: Spotify.
+</small></small>
+
 						</div><!-- // .box-info -->
 
 					</div><!-- // .desktop-3 -->
@@ -114,9 +117,6 @@
 					$(window).resize(resizeDivs);
 				</script>
 
-				<br></br>
-				<small>Interviews with leading figures in the global tech industry: <br> Mark Zuckerberg - CEO: Facebook, Jeff Benzos - CEO: Amazon, Brian Chesky - CEO: Airbnb, Larry Page &amp; Sergey Brin - Founders: Google, Peter Thiel - Founder: PayPal Palantir &amp; Marc Andreessen - Founder: Netscape, Steve Jobs - Founder: Apple Pixar, Nick Woodman - Founder: GoPro, Jack Dorsey - CEO: Twitter, James Park - CEO: Fitbit, Tim Cook - CEO: Apple, Reid Hoffman - Founder: LinkedIn, Stewart Butterfield - Founder: Flickr Slack, Drew Houston - Founder: Dropbox, Jack Ma - Founder: Alibaba Group, Jimmy Wales - CEO: Wikipedia, Niklas Zennström - Founder: Skype, Sean Rad - Founder: Tinder, Travis Kalanick - Founder: Uber, Satya Nadella - CEO: Microsoft, Elon Musk - Founder: SpaceX: Tesla &amp; Paypal, Bill Gates - Founder: Microsoft, Devin Wenig - Founder: eBay, Kevin Systrom - Founder: Instagram, Paul Eremenko - CEO: Airbus Group, Reid Hoffman - Founder: LinkedIn, Aaron Levie - Founder: Box, Jonathan Ive - CDO: Apple, Dustin Moskovitz -  Co-Founder: Facebook, Ben Silbermann - CEO: Pinterest, Reed Hastings - Founder: Netflix, Evan Spiegel - Founder: Snapchat, Daniel Ek - Founder: Spotify.
-</small>
 
 			</div><!-- // .desktop-9 -->
 
