--- a/about.html
+++ b/about.html
@@ -402,7 +402,7 @@ Caroline Achaintre, Elizabeth Price, and George Shaw (2017).<b>Bloomberg New Con
 							<h4>Further Qualifications</h4>
 							<p>
 								<b>‘The Neural Aesthetic - Machine Learning for Artists’</b>, School of Machines, Making &amp; Make-Believe, Berlin, 2016 <br>
-								<b>‘ITP Camp’</b>, Tisch School of the Arts, New York University, Berlin, 2018 <br>
+								<b>‘ITP Camp’</b>, Tisch School of the Arts, New York University, New York, 2018 <br>
 							<b>‘Programming Applications’</b>, Computer Science BSc Module, Kings College London 2015<br><br>
 
 							<b>'Convolutional Neural Networks'</b>, Andrew Ng, Coursera 2018<br>
