--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 					<div class="item">
 						<img src="images/project-zizi.jpg" alt="Jake Elwes digital artist" />
 
-						<h3 style="color: #999;">Zizi Projects - Upcoming</h3>
+						<h3 style="color: #999;">The Zizi Project - Upcoming</h3>
 						<span class="category" style="color: #999;">multiple, 2020 (work in progress)</span>
 					</div>
 				</div>
