--- a/project-zizi-2019.html
+++ b/project-zizi-2019.html
@@ -92,19 +92,19 @@
 							<p>
 								Zizi is a procession of faces of drag artists in constant transition generated from data using machine learning<small><sub>1</sub></small>. Drag is a queer performance form that celebrates and challenges gender and otherness. It's loud, bold and beautiful. Zizi’s gender, identity, race, whether they are real or artificial, is all uncertain.
 							</p><p>
-								Zizi tackles head-on the lack of representation in the training datasets often used by facial recognition systems. Zizi disrupts these systems by retraining them with the addition of drag and gender fluidity.
+								Zizi tackles head-on the lack of representation in the training datasets often used by facial recognition systems. Zizi disrupts these systems by retraining them with the addition of drag and gender fluidity. This causes the weights in the neural network to shift away from the normative identities it was originally trained on.
 							</p><p>
 								The work is a celebration of difference and ambiguity, which invites us to reflect on bias in our data driven society. If AI holds a mirror up to society, then Zizi applies the makeup.
 </p>
 <p><small><small>
 1) A Style-Based Generator Architecture for Generative Adversarial Networks (2019)</p></small>
 <p>
-								<a id="show" target="_blank" href="https://efi.ed.ac.uk/jake-elwes-exhibition/">Read full curatorial text by Drew Hemment.<br></a>
+								<a id="show" target="_blank" href="https://efi.ed.ac.uk/jake-elwes-exhibition/">Read full curatorial text by Drew Hemment, Edinburgh Futures Institute.<br></a>
 </p>
 	<p>
 								Instagram <a id="show" target="_blank" href="https://www.instagram.com/zizidrag/">@zizidrag</a> - machine learning generated captions trained on drag profiles.
 
-								 <br>Zizi was originally commissioned as a seven channel video installation by <a id="show" target="_blank" href="https://efi.ed.ac.uk/activity-and-partners/experiential-ai/">Experiential AI</a> at <a id="show" target="_blank" href="https://efi.ed.ac.uk/">Edinburgh Futures Institute</a> and Inspace. <br> Presented as site specific video installation with between 3 and 10 projected video channels.
+								 <br>Zizi was originally commissioned as a seven channel video installation by <a id="show" target="_blank" href="https://efi.ed.ac.uk/activity-and-partners/experiential-ai/">Experiential AI</a> at <a id="show" target="_blank" href="https://efi.ed.ac.uk/">Edinburgh Futures Institute</a> and Inspace, The University of Edinburgh. <br> Presented as site specific video installation with between 3 and 10 projected video channels.
 
 							 </small></p>
 
