--- a/index.html
+++ b/index.html
@@ -157,11 +157,22 @@
 					<div class="item">
 						<img src="images/project-zizi.jpg" alt="Jake Elwes digital artist" />
 
-						<h3 style="color: #999;">The Zizi Project - Upcoming</h3>
-						<span class="category" style="color: #999;">multiple, 2020 (work in progress)</span>
+						<h3 style="color: #999;">Zizi - A Virtual Show </h3>
+						<span class="category" style="color: #999;">web, 2020 (<a id="show" target="_blank" href="https://zizi.ai">zizi.ai</a> - coming soon as part of <a id="show" target="_blank" href="https://newreal.cc/">The New Real</a>)</span>
 					</div>
 				</div>
 			<!-- </a> -->
+
+			<a href="project-zizi-and-me.html" class="permalink">
+				<div class="desktop-4 tablet-6 columns">
+					<div class="item">
+						<img src="images/project-zizi-and-me.jpg" alt="Jake Elwes digital artist" />
+
+						<h3>Zizi & Me</h3>
+						<span class="category">video & performance, 2020 (in development)</span>
+					</div>
+				</div>
+			</a>
 
 			<a href="project-zizi-2019.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
@@ -174,6 +185,7 @@
 				</div>
 			</a>
 
+			<div class="clear hide-under-tablet"></div>
 
 			<a href="project-cusp.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
@@ -187,7 +199,6 @@
 			</a>
 
 
-			<div class="clear hide-under-tablet"></div>
 
 
 			<a href="project-latentSpace.html" class="permalink">
@@ -214,6 +225,8 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
+			<div class="clear hide-under-tablet"></div>
+
 
 			<a href="project-DaDaTa.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
@@ -226,7 +239,6 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
-			<div class="clear hide-under-tablet"></div>
 
 
 
@@ -255,6 +267,7 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
+			<div class="clear hide-under-tablet"></div>
 
 
 			<a href="project-MLPorn.html" class="permalink">
@@ -268,7 +281,6 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
-			<div class="clear hide-under-tablet"></div>
 
 
 			<a href="project-digitalTouch.html" class="permalink">
@@ -294,6 +306,7 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
+			<div class="clear hide-under-tablet"></div>
 
 
 			<a href="project-iPhoneTouch.html" class="permalink">
@@ -307,7 +320,6 @@
 		</div><!-- // .desktop-4 -->
 	</a>
 
-	<div class="clear hide-under-tablet"></div>
 
 
 			<a href="project-pornCircles.html" class="permalink">
