--- a/project-zizi-and-me.html
+++ b/project-zizi-and-me.html
@@ -9,7 +9,7 @@
 	<!-- Basic Page Needs
 	================================================== -->
 	<meta charset="utf-8">
-	<title>Jake Elwes - Zizi</title>
+	<title>Jake Elwes - Zizi & Me</title>
 	<meta name="description" content=".">
 	<meta name="author" content="Jake Elwes">
 
@@ -85,36 +85,27 @@
 					<div class="desktop-6 tablet-12 columns">
 
 						<div class="box-info">
-							<h3 class="border-top">Zizi - Queering the Dataset</h3>
-							<p class="project-desc">2019, multi-channel digital video, 135 minute loop
+							<h3 class="border-top">Zizi & Me</h3>
+							<p class="project-desc">2020, multi media (performance & video installation)
 </p>
 
 <p>
+
 	The Zizi Project <i>is an art work exploring the intersection of Artificial Intelligence (A.I.) and drag performance. Drag challenges gender and explores otherness, while A.I. is often mystified as a tool and contains social bias. Zizi combines them through a deep fake, synthesised drag identity created using machine learning. The project explores what AI can teach us about drag, and what drag can teach us about A.I.</i>
 </p><p>
-	‘Zizi - Queering the Dataset’ aims to tackle the lack of representation and diversity in the training datasets often used by facial recognition systems. The video was made by disrupting these systems<small><sub>1</sub></small> and re-training them with the addition of drag and gender fluid faces found online. This causes the weights inside the neural network to shift away from the normative identities it was originally trained on and into a space of queerness. ‘Zizi - Queering The Dataset’ lets us peek inside the machine learning system and visualise what the neural network has (and hasn’t) learnt. The work is a celebration of difference and ambiguity, which invites us to reflect on bias in our data driven society. 
+	‘Zizi & Me’ is a double act between drag queen <a id="show" target="_blank" href="https://www.instagram.com/methedragqueen/">Me</a>, and a deep fake (A.I.) clone of Me. We trained a neural network<small><sub>1</sub></small> on filmed footage. This network learnt to construct a virtual body that can be controlled by feeding it new reference movements. Through drag performance, this artwork aims to use cabaret and musical theatre to challenge narratives surrounding A.I. and society. 	
+
 </p>
 
-							<!-- <p>
-								Zizi is a procession of faces of drag artists in constant transition generated from data using machine learning<small><sub>1</sub></small>. Drag is a queer performance form that celebrates and challenges gender and otherness. It's loud, bold and beautiful. Zizi’s gender, identity, race, whether they are real or artificial, is all uncertain.
-							</p><p>
-								Zizi tackles head-on the lack of representation in the training datasets often used by facial recognition systems. Zizi disrupts these systems by retraining them with the addition of drag and gender fluidity. This causes the weights in the neural network to shift away from the normative identities it was originally trained on.
-							</p><p>
-								The work is a celebration of difference and ambiguity, which invites us to reflect on bias in our data driven society. If AI holds a mirror up to society, then Zizi applies the makeup.
-</p> -->
 
 
 <p><small><small>
-1) A Style-Based Generator Architecture for Generative Adversarial Networks (2019)</p></small>
-<p>
-								<a id="show" target="_blank" href="https://efi.ed.ac.uk/jake-elwes-exhibition/">Read full curatorial text by Drew Hemment, Edinburgh Futures Institute.<br></a>
-</p>
-	<p>
-								Instagram <a id="show" target="_blank" href="https://www.instagram.com/zizidrag/">@zizidrag</a> - machine learning generated captions trained on drag profiles.
+1) Video-to-Video Synthesis (2018)</p></small>
 
-								 <br>Zizi was originally commissioned as a seven channel video installation by <a id="show" target="_blank" href="https://efi.ed.ac.uk/activity-and-partners/experiential-ai/">Experiential AI</a> at <a id="show" target="_blank" href="https://efi.ed.ac.uk/">Edinburgh Futures Institute</a> and Inspace, The University of Edinburgh. <br> Presented as site specific video installation with between 3 and 10 projected video channels.
+							<p>
+									With <a id="show" target="_blank" href="https://efi.ed.ac.uk/">Edinburgh Futures Institute</a> at University of Edinburgh.
 
-							 </small></p>
+								</small></p>
 
 						</div><!-- // .box-info -->
 
@@ -134,16 +125,21 @@
 			<!-- <div class="desktop-6 tablet-12 columns" style="text-transform: uppercase;"> -->
 			<script>
 				function resizeDivs() {
-					$('#vid').css("height", $('#vid').width());
-					$('#vid2').css("height", $('#vid2').width()/1.7777);
+					$('#vid').css("height", $('#vid').width()/1.7777);
 
 				}
 				$(resizeDivs);
 				$(window).resize(resizeDivs);
 			</script>
-			<iframe id="vid" src="https://player.vimeo.com/video/388245510?loop=1&title=0&byline=0&portrait=0" width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-			<br>
 
+			<iframe id="vid" width="100%" height="360" src="https://www.youtube.com/embed/vtpVr5KVvnk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+			<small>Zizi & Me - Anything You Can Do (I Can Do Better), Digital Video, 2020<br>
+				<small>Created by Jake Elwes <br>
+				Performance - <a id="show" target="_blank" href="https://www.instagram.com/methedragqueen/">Me</a> <br>
+				Cinematographer - <a id="show" target="_blank" href="https://www.tobyelwes.com/">Toby Elwes</a> <br>
+				With Edinburgh Futures Institute at University of Edinburgh</small></small>
+
+			<br>
 			</div><!-- // .desktop-9 -->
 
 			<div class="clear"></div>
