--- a/index.html
+++ b/index.html
@@ -199,8 +199,6 @@
 			</a>
 
 
-
-
 			<a href="project-latentSpace.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
 					<div class="item">
@@ -346,6 +344,7 @@
 			</a>
 
 
+			<div class="clear hide-under-tablet"></div>
 
 			<!-- Download: <a id=show target="_blank" href="JElwes-Portfolio.pdf">WORKS PDF</a> | <a id=show target="_blank" href="cv.pdf">CV PDF</a> -->
 
