--- a/project-zizi-and-me.html
+++ b/project-zizi-and-me.html
@@ -90,11 +90,11 @@
 </p>
 
 <p>
-
-	The Zizi Project <i>is an art work exploring the intersection of Artificial Intelligence (A.I.) and drag performance. Drag challenges gender and explores otherness, while A.I. is often mystified as a tool and contains social bias. Zizi combines them through a deep fake, synthesised drag identity created using machine learning. The project explores what AI can teach us about drag, and what drag can teach us about A.I.</i>
-</p><p>
 	‘Zizi & Me’ is a double act between drag queen <a id="show" target="_blank" href="https://www.instagram.com/methedragqueen/">Me</a>, and a deep fake (A.I.) clone of Me. We trained a neural network<small><sub>1</sub></small> on filmed footage. This network learnt to construct a virtual body that can be controlled by feeding it new reference movements. Through drag performance, this artwork aims to use cabaret and musical theatre to challenge narratives surrounding A.I. and society. 	
 
+</p>
+<p>
+	<i>The Zizi Project is a collection of works by Jake Elwes exploring the intersection of Artificial Intelligence (A.I.) and drag performance. Drag challenges gender and explores otherness, while A.I. is often mystified as a tool and contains social bias. Zizi combines them through a deep fake, synthesised drag identity created using machine learning. The project explores what AI can teach us about drag, and what drag can teach us about A.I.</i>
 </p>
 
 
