--- a/project-zizi-and-me.html
+++ b/project-zizi-and-me.html
@@ -86,7 +86,7 @@
 
 						<div class="box-info">
 							<h3 class="border-top">Zizi & Me</h3>
-							<p class="project-desc">2020, multi media (performance & video installation)
+							<p class="project-desc">2020, multi media (performance & video installation - in development)
 </p>
 
 <p>
@@ -133,11 +133,10 @@
 			</script>
 
 			<iframe id="vid" width="100%" height="360" src="https://www.youtube.com/embed/vtpVr5KVvnk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-			<small>Zizi & Me - Anything You Can Do (I Can Do Better), Digital Video, 2020<br>
+			<small>Zizi & Me (teaser) - Anything You Can Do (I Can Do Better), Digital Video, 2020<br>
 				<small>Created by Jake Elwes <br>
 				Performance - <a id="show" target="_blank" href="https://www.instagram.com/methedragqueen/">Me</a> <br>
-				Cinematographer - <a id="show" target="_blank" href="https://www.tobyelwes.com/">Toby Elwes</a> <br>
-				With Edinburgh Futures Institute at University of Edinburgh</small></small>
+				Cinematographer - <a id="show" target="_blank" href="https://www.tobyelwes.com/">Toby Elwes</a> </small></small>
 
 			<br>
 			</div><!-- // .desktop-9 -->
