--- a/about.html
+++ b/about.html
@@ -146,7 +146,7 @@
 
 					<p style="margin-top:0px;">Jake is an artist living and working in London. His recent works have looked at machine learning and artificial intelligence research, exploring the code, philosophy and ethics behind it. In his art Jake engages with both the history and tropes of fine art and the possibilities and consequences of digital technology. He graduated with a BA in Fine Art from the Slade School of Fine Art (UCL), London in 2017.
 
-					<br><br>Jake's work has been exhibited in museums and galleries internationally, including the ZKM, Karlsruhe, Germany; TANK Museum, Shanghai; Today Art Museum, Beijing; CyFest, Venice; Edinburgh Futures Institute, UK; Zabludowicz Collection, London; Frankfurter Kunstverein, Germany;  New Contemporaries 2017, UK; Ars Electronica 2017, Austria; Victoria and Albert Museum, London; LABoral Centro, Spain; Nature Morte, Delhi, India and the Centre for the Future of Intelligence (CFI), UK. </p>
+					<br><br>Jake's work has been exhibited in museums and galleries internationally, including the ZKM, Karlsruhe, Germany; TANK Museum, Shanghai; Today Art Museum, Beijing; CyFest, Venice; Edinburgh Futures Institute, UK; Zabludowicz Collection, London; Frankfurter Kunstverein, Germany;  New Contemporaries 2017, UK; Ars Electronica 2017, Austria; Victoria and Albert Museum, London; LABoral Centro, Spain; Nature Morte, Delhi, India, Centre for the Future of Intelligence, UK and he has been featured on BBC4. </p>
 
 
 
