--- a/news.html
+++ b/news.html
@@ -145,10 +145,7 @@
 							<p class="quote" style="margin-top:0px;">BBC4 - Kill Your TV</p>
 							<footer>November 2019</footer>
 						</blockquote>
-						<img src="images/news/BBC1.jpg" width="48%" alt="Jake Elwes digital artist" />
-						<img src="images/news/BBC2.jpg" width="48%" alt="Jake Elwes digital artist" />
-						<img src="images/news/BBC3.jpg" width="48%" alt="Jake Elwes digital artist" />
-						<img src="images/news/BBC4.jpg" width="48%" alt="Jake Elwes digital artist" />
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/5kS59JagNFY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>				
 						<br><small>Kill Your TV: Jim Moir’s Weird World Of Video Art</small>
 
 						<p>
@@ -156,6 +153,10 @@
 							<br><br>
 							The interview and my work CUSP is featured towards the end of the programme, around 52 minutes.
 							<br><a id=show href="https://www.bbc.co.uk/programmes/m000bpjw">Watch: Kill Your TV: Jim Moir’s Weird World Of Video Art</a><br><br>
+							<img src="images/news/BBC1.jpg" width="48%" alt="Jake Elwes digital artist" />
+							<img src="images/news/BBC2.jpg" width="48%" alt="Jake Elwes digital artist" />
+							<img src="images/news/BBC3.jpg" width="48%" alt="Jake Elwes digital artist" />
+							<img src="images/news/BBC4.jpg" width="48%" alt="Jake Elwes digital artist" /><br><br>
       </p>
 
 
