--- a/project-closedLoop.html
+++ b/project-closedLoop.html
@@ -103,7 +103,7 @@
 							Two datasets to train the algorithms: a dataset of 4.1 million captioned images to train a language network, and the Imagenet dataset of 14.2 million photographs to train the image generator network.<br>
 							<br>
 					<!-- “What happens when an AI that interprets images in words converses with another AI that interprets words in images?
-					Are the possibilities of comprehension and miscomprehension all that different from what happens when two humans, perhaps from different cultures, meet? Closed Loop works with two different algorithms to enable us to eavesdrop on this eerie conversation. <i>Closed Loop has had no textual or visual input by the artist.</i>  <br><br>
+					Are the possibilities of comprehension and miscomprehension all that different from what happens when two humans, perhaps from different cultures, meet? Closed Loop works with two different algorithms to enable us to eavesdrop on this eerie conversation. <i>Closed Loop has had no textual or visual input by the artist.</i> <br><br>
 					The conversation which shifts between the logical, to the enigmatic to the frankly incomprehensible, produces constant frissons of surprise and in the end a profound sense of displacement from one’s own settled perceptual self.” -->
 
 <!-- Closed Loop is a recording of two artificial intelligence models conversing with each other - one with words the other with images - in a never-ending feedback loop. The words of one describe the images of the other, which then seeks to describe the words with a fresh image… Two neural networks getting lost in their own nuances, sparking and branching off each other as they converse in a perpetual game of AI "Exquisite Corpse". -->
@@ -154,14 +154,14 @@ Two datasets to train the algorithms: a dataset of 4.1 million captioned images 
 				<small>Single channel rendering of two channel video installation</small>
 
 				<br></br>
-				<!-- <img src="images/project-closedLoop/1_granary_jake_elwes__043.jpg" alt="Jake Elwes digital artist" /> -->
-				<img src="images/project-closedLoop/CLoop-1.jpg" alt="Jake Elwes digital artist" />
-				<small>Installation shot of Closed Loop 2017 - projection on two hanging perspex panels</small>
-				<!-- <img src="images/project-closedLoop/naturemorte-5510-w1200-h800.jpg" alt="Jake Elwes digital artist" />
-				<small>Installation shot of Closed Loop shown as two projections, <a id=show target="_blank" href="http://naturemorte.com/exhibitions/gradientdescent/"> 'Gradient Descent', Nature Morte</a>, Delhi 2018</small>
-				<img src="images/project-closedLoop/IMG_0853.jpg" alt="Jake Elwes digital artist" /> -->
+				<img src="images/project-closedLoop/CLoop1.jpg" alt="Jake Elwes digital artist" />
+				<small>installation shot from Future Intelligence 2019 - Tank Museum, Shanghai</small>
 
-				<!-- <img src="images/project-closedLoop/IMG_0702.jpg" alt="Jake Elwes digital artist" /> -->
+				<img src="images/project-closedLoop/CLoop2.jpg" alt="Jake Elwes digital artist" />
+				<small>installation shot from Future Intelligence 2019 - Tank Museum, Shanghai</small>
+				<img src="images/project-closedLoop/CLoop3.jpg" alt="Jake Elwes digital artist" />
+				<small>Installation shot from Writing the History of the Future 2019 - ZKM, Karlsruhe</small>
+
 
 
 			</div><!-- // .desktop-9 -->
