--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
 			<div class="desktop-2 tablet-6 columns">
 				<!-- icons to try for about fa-eye fa-male fa-plus -->
-				<a href="news.html" class="btn-social btn-outline"><p>NEWS</p></a>
+				<a href="news.html" class="btn-social btn-outline"><p>NEWS &amp; TALKS</p></a>
 			</div><!-- // .desktop-3 -->
 
 
@@ -157,7 +157,7 @@
 					<div class="item">
 						<img src="images/project-zizi.jpg" alt="Jake Elwes digital artist" />
 
-						<h3 style="color: #999;">Zizi - A Virtual Show </h3>
+						<h3 style="color: #999;">The Zizi Show </h3>
 						<span class="category" style="color: #999;">web, 2020 (<a id="show" target="_blank" href="https://zizi.ai">zizi.ai</a> - coming soon as part of <a id="show" target="_blank" href="https://newreal.cc/">The New Real</a>)</span>
 					</div>
 				</div>
