--- a/project-zizi-2019.html
+++ b/project-zizi-2019.html
@@ -143,7 +143,18 @@
 				$(window).resize(resizeDivs);
 			</script>
 			<iframe id="vid" src="https://player.vimeo.com/video/388245510?loop=1&title=0&byline=0&portrait=0" width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+			<br><small>Zizi: Queering the Dataset 2019, 30 second extract of single channel</small>
+			<br><br>
+
+
+			<img src="images/project-zizi19/Screen1.jpg" style="width:49%; " alt="CUSP 2019 - Jake Elwes digital artist" />
+			<img src="images/project-zizi19/Screen2.jpg" style="width:49%; " alt="CUSP 2019 - Jake Elwes digital artist" />
+			<br><small>Zizi: Queering the Dataset 2019, custom LED screen</small>
 			<br>
+			<img src="images/project-zizi19/Edinburgh.jpg" style="width:60%; " alt="CUSP 2019 - Jake Elwes digital artist" />
+			<img src="images/project-zizi19/ZiziFace.jpg" style="width:36%; " alt="CUSP 2019 - Jake Elwes digital artist" />
+			<rb></rb><small>Edinburgh 2019, Experiential AI at Edinburgh Futures Institute and Inspace during Edinburgh Fringe Festival</small>
+
 
 			</div><!-- // .desktop-9 -->
 
