--- a/about.html
+++ b/about.html
@@ -193,7 +193,7 @@
 							<b>2021</b> - <a id=show target="_blank" href="https://www.lebensongallery.com/collections/jake-elwes"> <b>Lebenson Gallery</b></a>, Shoreditch, London<br>
 							<b>2021</b> - <a id=show target="_blank" href="https://www.sculptureinthecity.org.uk/"> <b>Sculpture in the City</b></a>, City of London<br>
 							<b>2021</b> - <a id=show target="_blank" href="https://gazelliarthouse.com/"> <b>Gazelli Art House</b></a>, Mayfair, London<br>
-							<b>2021</b> - <a id=show target="_blank" href="https://zkm.de/"> <b>ZKM | Center for Art and Media (new show)</b>, Karlsruhe, Germany<br>
+							<b>2021</b> - <a id=show target="_blank" href="https://zkm.de/"> <b>ZKM | Center for Art and Media (new show)</b></a>, Karlsruhe, Germany<br>
 
 							<!-- BALTIC Hidden States -->
 
